tests/reference/asr_preprocess-cpp6-556419a.stderr
input:3:1 semantic error: Variable 'z12' not declared
#include "cpp6.h"
^~~~~~~~~~~~~~~~~
